--- a/nginx/values.yaml
+++ b/nginx/values.yaml
@@ -1,11 +1,11 @@
-# Default values for shopping-list.
+# Default values for nginx.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: 562520104894.dkr.ecr.eu-central-1.amazonaws.com/shopping-list
+  repository: 562520104894.dkr.ecr.eu-central-1.amazonaws.com/nginx-shopping-list
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: latest
@@ -16,20 +16,12 @@ fullnameOverride: ""
 
 serviceAccount:
   # Specifies whether a service account should be created
-  create: true
+  create: false
   # Annotations to add to the service account
   annotations: {}
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
   name: ""
-
-container:
-  containerPort: 5000
-  envFrom: shopping-list-configmap
-  envName: MONGO_URL
-  envKeyName: shopping-list-secret
-  envKeyValue: mongo-uri
-
 
 podAnnotations: {}
 
@@ -46,32 +38,54 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 5000
-  targetPort: 5000
+  port: 80
+  targetPort: 80
   protocol: TCP
 
-configMap:
-  NAME: "shopping-list-configmap"
-  # MONGO_URL: 'mongodb://matan:Password1@mongo:27017/mydb?authSource=mydb'
-  HOST: "0.0.0.0"
-  PORT: "5000"
-  DEBUG: "true"
+
+container:
+  containerPort: 80
 
 ingress:
-  enabled: false
+  enabled: true
   className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
+  ingressClass: nginx
+  certManagerIssuer: "letsencrypt-prod2"
     # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
+  name: nginx-ingress
+  hostURL: ii2g3t2-g25di89.tk
+  pathMain: "/"
+  serviceName: nginx
+  portNumber: 80
+  # tls: []
+  #  - secretName: nginx-tls-3
   #    hosts:
-  #      - chart-example.local
+  #      - www.ii2g3t2-g25di89.tk
+  #      - ii2g3t2-g25di89.tk
+
+  # tls:
+  # - hosts:
+  #   - ii2g3t2-g25di89.tk
+  #   - www.ii2g3t2-g25di89.tk
+  #   secretName: nginx-tls-3
+
+
+
+# ingress:
+#   enabled: false
+#   className: ""
+#   annotations: {}
+#     # kubernetes.io/ingress.class: nginx
+#     # kubernetes.io/tls-acme: "true"
+#   hosts:
+#     - host: chart-example.local
+#       paths:
+#         - path: /
+#           pathType: ImplementationSpecific
+#   tls: []
+#   #  - secretName: chart-example-tls
+#   #    hosts:
+#   #      - chart-example.local
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
