--- a/nginx/values.yaml
+++ b/nginx/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: 562520104894.dkr.ecr.eu-central-1.amazonaws.com/nginx-shopping-list
+  repository: 006262944085.dkr.ecr.eu-central-1.amazonaws.com/shopping-list-nginx
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: latest
