--- a/nginx/templates/deployment.yaml
+++ b/nginx/templates/deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.imageTag | default .Chart.AppVersion }}"
           ports:
             - containerPort: {{ .Values.container.containerPort }}
       #     volumeMounts:
