--- a/shopping-list/templates/deployment.yaml
+++ b/shopping-list/templates/deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.imageTag | default .Chart.AppVersion }}"
           envFrom:
           - configMapRef:
               name: {{ .Values.container.envFrom }}
