--- a/shopping-list/values.yaml
+++ b/shopping-list/values.yaml
@@ -58,17 +58,18 @@ configMap:
   DEBUG: "true"
 
 ingress:
-  enabled: false
+  enabled: true
   className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
+  ingressClass: nginx
+  certManagerIssuer: "letsencrypt-prod2"
     # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
+  name: nginx-ingress
+  hostURL: ii2g3t2-g25di89.tk
+  hostURL2: www.ii2g3t2-g25di89.tk
+  pathMain: "/app"
+  serviceName: nginx
+  portNumber: 5000
+  # tls: []
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
