--- a/shopping-list/values.yaml
+++ b/shopping-list/values.yaml
@@ -63,7 +63,7 @@ ingress:
   ingressClass: nginx
   certManagerIssuer: "letsencrypt-prod2"
     # kubernetes.io/tls-acme: "true"
-  name: nginx-ingress
+  name: app-ingress
   hostURL: ii2g3t2-g25di89.tk
   hostURL2: www.ii2g3t2-g25di89.tk
   pathMain: "/app"
