--- a/shopping-list/values.yaml
+++ b/shopping-list/values.yaml
@@ -67,7 +67,7 @@ ingress:
   hostURL: ii2g3t2-g25di89.tk
   hostURL2: www.ii2g3t2-g25di89.tk
   pathMain: "/app"
-  serviceName: nginx
+  serviceName: shopping-list
   portNumber: 5000
   # tls: []
   #  - secretName: chart-example-tls
