--- a/kube-prometheus-stack/charts/grafana/values.yaml
+++ b/kube-prometheus-stack/charts/grafana/values.yaml
@@ -183,17 +183,17 @@ ingress:
   # See https://kubernetes.io/blog/2020/04/02/improvements-to-the-ingress-api-in-kubernetes-1.18/#specifying-the-class-of-an-ingress
   # ingressClassName: nginx
   # Values can be templated
-  annotations: {}
+  annotations: #{}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
-  labels: {}
+  labels: #{}
   path: /
 
   # pathType is only for k8s >= 1.1=
   pathType: Prefix
 
   hosts:
-    - chart-example.local
+    # - mon.ii2g3t2-g25di89.tk
   ## Extra paths to prepend to every host configuration. This is useful when working with annotation based services.
   extraPaths: []
   # - path: /*
@@ -201,13 +201,13 @@ ingress:
   #     serviceName: ssl-redirect
   #     servicePort: use-annotation
   ## Or for k8s > 1.19
-  # - path: /*
+  # - path: /
   #   pathType: Prefix
   #   backend:
   #     service:
-  #       name: ssl-redirect
+  #       name: kube-prometheus-stack-grafana
   #       port:
-  #         name: use-annotation
+  #         name: 3000
 
 
   tls: []
