--- a/elasticsearch/charts/kibana/values.yaml
+++ b/elasticsearch/charts/kibana/values.yaml
@@ -173,7 +173,7 @@ persistence:
   existingClaim: ""
   ## @param persistence.accessMode Access mode to the PV
   ##
-  accessMode: ReadWriteOnce # erez
+  accessMode: ReadWriteOnce 
   ## @param persistence.size Size for the PV
   ##
   size: 10Gi
@@ -226,7 +226,7 @@ service:
   port: 5601
   ## @param service.type Kubernetes Service type
   ##
-  type: ClusterIP # LoadBalancer erez
+  type: ClusterIP # LoadBalancer
   ## @param service.nodePort Specify the nodePort value for the LoadBalancer and NodePort service types
   ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
   ##
