--- a/kube-prometheus-stack/values.yaml
+++ b/kube-prometheus-stack/values.yaml
@@ -1402,7 +1402,7 @@ prometheusOperator:
   ## Prometheus-Operator v0.39.0 and later support TLS natively.
   ##
   tls:
-    enabled: false #erez
+    enabled: false 
     # Value must match version names from https://golang.org/pkg/crypto/tls/#pkg-constants
     tlsMinVersion: VersionTLS13
     # The default webhook port is 10250 in order to work out-of-the-box in GKE private clusters and avoid adding firewall rules.
@@ -1412,7 +1412,7 @@ prometheusOperator:
   ## rules from making their way into prometheus and potentially preventing the container from starting
   admissionWebhooks:
     failurePolicy: Fail
-    enabled: false #erez
+    enabled: false 
     ## A PEM encoded CA bundle which will be used to validate the webhook's server certificate.
     ## If unspecified, system trust roots on the apiserver are used.
     caBundle: ""
@@ -1421,7 +1421,7 @@ prometheusOperator:
     ## certs ahead of time if you wish.
     ##
     patch:
-      enabled: false #erez
+      enabled: false 
       image:
         repository: k8s.gcr.io/ingress-nginx/kube-webhook-certgen
         tag: v1.0
@@ -2177,7 +2177,7 @@ prometheus:
     ## prometheus resource to be created with selectors based on values in the helm deployment,
     ## which will also match the servicemonitors created
     ##
-    serviceMonitorSelectorNilUsesHelmValues: false #erez
+    serviceMonitorSelectorNilUsesHelmValues: false 
 
     ## ServiceMonitors to be selected for target discovery.
     ## If {}, select all ServiceMonitors
@@ -2372,7 +2372,7 @@ prometheus:
     ## The scrape configuration example below will find master nodes, provided they have the name .*mst.*, relabel the
     ## port to 2379 and allow etcd scraping provided it is running on all Kubernetes master nodes
     ##
-    additionalScrapeConfigs: # []erez
+    additionalScrapeConfigs: # []
       - job_name: nginx-ingress
         metrics_path: /metrics
         scrape_interval: 5s
