--- a/nginx/templates/configmap.yaml
+++ b/nginx/templates/configmap.yaml
@@ -19,7 +19,7 @@
 
 #         location /  {
 #           # index index.html;
-#           proxy_pass         http://backend;
+#           proxy_pass         http://shopping-list.default.svc.cluster.local:5000;
 #           add_header  X-container-name frontend;
 #           try_files $uri $uri/ static/$uri @backend ;
 #         }
@@ -28,7 +28,7 @@
 #         location @backend {
 
 #           add_header  X-container-name backend;
-#           proxy_pass         http://backend;
+#           proxy_pass         http://shopping-list.default.svc.cluster.local:5000;
 #           proxy_redirect     off;
 #           proxy_set_header   Host             $host;
 #           proxy_set_header   X-Real-IP        $remote_addr;
